--- a/public/app/views/pages/game.html
+++ b/public/app/views/pages/game.html
@@ -13,10 +13,10 @@
       </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>#1</td>
-          <td>mark</td>
-          <td>5</td>
+        <tr ng-repeat="user in vm.scoreBoard">
+          <td>#{{$index}}</td>
+          <td>{{user.userName}}</td>
+          <td>{{user.solvedJewels}}</td>
         </tr>
       </tbody>
     </table>
@@ -29,10 +29,13 @@
   </div>
 
   <form class="play-form">
-    <h1 class="shuffled">jellyfish</h1>
-    <input type="text" name="" placeholder="answer">
+    <h1 class="shuffled">{{vm.shuffledWord}}</h1>
+    <input type="text" ng-model="vm.userAnswer" placeholder="answer">
     <button ng-click="vm.submitWord()" type="submit" class="my-button">Submit</button>
     <button ng-click="vm.getAnotherWord()" type="submit" class="my-button">Another Word</button>
   </form>
+
+  <h3 class="flash">{{vm.status}}</h3>
+
 
 </section>
