--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -8,7 +8,7 @@
       <thead>
       <tr>
         <th>Rank</th>
-        <th>Username</th>
+        <th>User</th>
         <th>Solved</th>
       </tr>
       </thead>
@@ -23,7 +23,7 @@
   </div>
     
   <form ng-submit="vm.startGame()" class="play-form">
-    <input type="text" ng-model="vm.username" placeholder="username">
+    <input type="text" ng-model="vm.username" placeholder="username" maxlength="10">
     <button type="submit" class="my-button">Play</button>
   </form>
 
