--- a/public/app/views/pages/game.html
+++ b/public/app/views/pages/game.html
@@ -1,6 +1,6 @@
 <section class="game-screen"> 
 
-  <h1 class="title">NINE JEWELS</h1>
+  <h1 class="title" ng-click="vm.titleClick()">NINE JEWELS</h1>
 
   <div class="leaderboard">
     <h4>Leaderboard</h4>
@@ -23,9 +23,7 @@
   </div>
 
   <div class="description">
-    <h3>
-      Order the nine shuffled letters word. 
-    </h3>
+    <p>Order the nine shuffled letters word.</p>
   </div>
 
   <h3 class="flash" ng-class="{'flashColor': vm.flashVisible}">{{vm.status}}</h3>
