--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -54,7 +54,7 @@ body {
 }
 
 .leaderboard {
-  width: 20%;
+  width: 16%;
   position: fixed;
   top: 15px;
   right: 15px;
@@ -139,6 +139,9 @@ body {
 @media (max-width: 992px) {
   .title {
     font-size: 50px;
+  }
+  .leaderboard {
+    width: 20%;
   }
 }
 
