--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -78,7 +78,7 @@ body {
 }
 
 .play-form {
-  padding: 30px;
+  padding: 30px 30px 10px;
   margin: 0 auto 30px;
   text-align: center;
   border-radius: 10px;
@@ -131,6 +131,11 @@ body {
 .game-screen .play-form {
   width: 350px;
   margin-top: 40px;
+}
+
+.hint {
+  padding-top: 10px;
+  font-size: 20px;
 }
 
 
