--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -23,7 +23,8 @@
   </div>
 
   <div class="description">
-    <p>Given an English nine shuffled letters word, try to re-order them.</p>
+    <p>Given a nine shuffled letters word, try to re-order them to form a correct English word.</p>
+    <p>Note that you get one score point for every three words you solve using a hint.</p>
   </div>
     
   <form ng-submit="vm.startGame()" class="play-form">
