--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="dist/styles.min.css">
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -19,12 +19,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
 
-
-  <script src="app/app.js"></script>
-  <script src="app/controllers/gameCtrl.js"></script>
-  <script src="app/controllers/homeCtrl.js"></script>
-  <script src="app/services/userService.js"></script>
-  <script src="app/services/gameService.js"></script>
+  <script src="dist/scripts.min.js"></script>
 
 </head>
 
