--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/styles.min.css"> 
+  <link rel="stylesheet" href="dist/styles.min.css"> 
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
