make the leaderboard table scrollable

--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="description">
-    <p>Given a nine shuffled letters word, try to re-order them to form a correct English word.</p>
+    <p>Given a nine shuffled letters, try to re-order them to form a correct English word.</p>
     <p>Note that you get one score point for every three words you solve using a hint.</p>
   </div>
     
