--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -16,11 +16,6 @@ body {
 
 /* General */
 
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; 
-}
-
 .description {
   margin: 0 auto;
   color: #fff;
@@ -60,14 +55,32 @@ body {
 
 .leaderboard {
   max-height: 305px;
-  overflow: auto;
-  width: 16%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 17%;
   position: fixed;
   top: 15px;
   right: 15px;
-  border-radius: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
   box-shadow: 3px 3px 20px #000;
   background-color: #74edaf;
+}
+
+.leaderboard::-webkit-scrollbar-track {
+	background-color: #F5F5F5;
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.leaderboard::-webkit-scrollbar {
+	width: 8px;
+	background-color: #74edaf;
+}
+
+.leaderboard::-webkit-scrollbar-thumb {
+	background-color: #59e09a;
 }
 
 .leaderboard table {
